--- a/src/style.css
+++ b/src/style.css
@@ -4,13 +4,13 @@
 
 @layer components {
     .section {
-      @apply max-w-5xl mx-auto px-8 py-16 md:py-24;
+      @apply max-w-5xl mx-auto px-8 py-16;
     }
     .nav-links {
       @apply transition duration-200 ease-in-out hover:bg-brand hover:text-white py-6 px-3;
     }
     .btn {
-      @apply py-3 px-5 bg-black-800 text-white text-xs tracking-wider uppercase rounded-md shadow-md hover:bg-black-700 focus:outline-none focus:ring-4 focus:ring-black-400 focus:ring-opacity-75;
+      @apply py-3 px-5 bg-black-dark text-white text-xs tracking-wider uppercase rounded-md shadow-md hover:bg-black-700 focus:outline-none focus:ring-4 focus:ring-black-400 focus:ring-opacity-75;
     }
     .input {
       @apply w-full border border-gray-300 px-3 py-2 mt-1 bg-white focus:bg-gray-100 rounded focus:shadow outline-none focus:ring-2 focus:ring-gray-600 focus:ring-opacity-90;
