--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,9 +11,9 @@
       @apply transition duration-200 ease-in-out hover:bg-brand hover:text-white py-6 px-3;
     }
     .btn {
-      @apply py-3 px-5 bg-black-dark text-white text-xs tracking-wider uppercase rounded-md shadow-md hover:bg-black-700 focus:outline-none focus:ring-4 focus:ring-black-400 focus:ring-opacity-75;
+      @apply py-2 px-5 bg-gray-800 text-white text-xs tracking-wider rounded shadow-md hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-black-400 focus:ring-opacity-75;
     }
     .input {
-      @apply w-full border border-gray-300 px-3 py-2 mt-1 bg-white focus:bg-gray-100 rounded focus:shadow outline-none focus:ring-2 focus:ring-gray-600 focus:ring-opacity-90;
+      @apply w-full border border-gray-300 px-3 py-1 mt-1 bg-white focus:bg-gray-100 rounded focus:shadow outline-none focus:ring-2 focus:ring-gray-600 focus:ring-opacity-90;
     }
   }
