--- a/public/css/style.css
+++ b/public/css/style.css
@@ -590,6 +590,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: -0.5rem;
 }
 
+.-top-5{
+  top: -1.25rem;
+}
+
+.-left-5{
+  left: -1.25rem;
+}
+
 .z-10{
   z-index: 10;
 }
@@ -690,8 +698,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 3rem;
 }
 
+.mb-8{
+  margin-bottom: 2rem;
+}
+
 .-mr-10{
   margin-right: -2.5rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
 }
 
 .block{
@@ -786,6 +806,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 1.25rem;
 }
 
+.w-12{
+  width: 3rem;
+}
+
 .w-7\/12{
   width: 58.333333%;
 }
@@ -806,10 +830,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-8{
   width: 2rem;
-}
-
-.w-\[18px\]{
-  width: 18px;
 }
 
 .max-w-5xl{
@@ -834,24 +854,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .-translate-x-full{
   --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-50{
-  --tw-scale-x: .5;
-  --tw-scale-y: .5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-100{
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-0{
-  --tw-scale-x: 0;
-  --tw-scale-y: 0;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1386,6 +1388,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 2.5rem;
 }
 
+.pb-8{
+  padding-bottom: 2rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -1655,12 +1661,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.25rem;
 }
 
-.hover\:scale-100:hover{
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:rounded-3xl:hover{
   border-radius: 1.5rem;
 }
@@ -1673,6 +1673,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:bg-brand-800:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(239 51 58 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-transparent:hover{
+  background-color: transparent;
 }
 
 .hover\:bg-gray-700:hover{
