--- a/public/css/style.css
+++ b/public/css/style.css
@@ -695,6 +695,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 2rem;
 }
 
+.mb-8{
+  margin-bottom: 2rem;
+}
+
 .mt-10{
   margin-top: 2.5rem;
 }
@@ -703,12 +707,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 3rem;
 }
 
-.mb-8{
-  margin-bottom: 2rem;
-}
-
 .-mr-10{
   margin-right: -2.5rem;
+}
+
+.mr-4{
+  margin-right: 1rem;
 }
 
 .block{
@@ -805,10 +809,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-12{
   width: 3rem;
-}
-
-.w-7\/12{
-  width: 58.333333%;
 }
 
 .w-64{
@@ -1117,6 +1117,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 0.75;
 }
 
+.bg-opacity-80{
+  --tw-bg-opacity: 0.8;
+}
+
+.bg-opacity-95{
+  --tw-bg-opacity: 0.95;
+}
+
 .bg-\[url\(\'\.\.\/images\/punji-bridhi\.png\'\)\]{
   background-image: url('../images/punji-bridhi.png');
 }
@@ -1157,6 +1165,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-image: url('https://images.unsplash.com/photo-1617906681842-94a418bb88f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80');
 }
 
+.bg-\[url\(\'https\:\/\/cdn\.pixabay\.com\/photo\/2017\/02\/01\/22\/02\/mountain-landscape-2031539_960_720\.jpg\'\)\]{
+  background-image: url('https://cdn.pixabay.com/photo/2017/02/01/22/02/mountain-landscape-2031539_960_720.jpg');
+}
+
+.bg-\[url\(\'https\:\/\/cdn\.pixabay\.com\/photo\/2019\/12\/13\/08\/21\/gokyo-ri-4692458__340\.jpg\'\)\]{
+  background-image: url('https://cdn.pixabay.com/photo/2019/12/13/08/21/gokyo-ri-4692458__340.jpg');
+}
+
+.bg-\[url\(\'https\:\/\/cdn\.pixabay\.com\/photo\/2022\/03\/17\/15\/16\/monk-7074864_960_720\.jpg\'\)\]{
+  background-image: url('https://cdn.pixabay.com/photo/2022/03/17/15/16/monk-7074864_960_720.jpg');
+}
+
+.bg-\[url\(\'\.\.\/images\/hero\.jpg\'\)\]{
+  background-image: url('../images/hero.jpg');
+}
+
 .from-white{
   --tw-gradient-from: #fff;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(255 255 255 / 0));
@@ -1189,6 +1213,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .bg-bottom{
   background-position: bottom;
+}
+
+.bg-top{
+  background-position: top;
 }
 
 .bg-no-repeat{
@@ -1256,10 +1284,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .p-9{
   padding: 2.25rem;
-}
-
-.p-12{
-  padding: 3rem;
 }
 
 .p-3{
@@ -1336,6 +1360,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 5rem;
 }
 
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .pt-32{
   padding-top: 8rem;
 }
@@ -1366,14 +1395,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pb-12{
   padding-bottom: 3rem;
-}
-
-.pt-3{
-  padding-top: 0.75rem;
-}
-
-.pb-2{
-  padding-bottom: 0.5rem;
 }
 
 .pl-3{
@@ -1412,11 +1433,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2.25rem;
 }
 
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1446,6 +1462,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .font-black{
   font-weight: 900;
+}
+
+.uppercase{
+  text-transform: uppercase;
 }
 
 .not-italic{
@@ -1517,6 +1537,36 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-black-200{
+  --tw-text-opacity: 1;
+  color: rgb(185 185 185 / var(--tw-text-opacity));
+}
+
+.text-gray-200{
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-gray-50{
+  --tw-text-opacity: 1;
+  color: rgb(249 250 251 / var(--tw-text-opacity));
+}
+
+.text-gray-100{
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -1655,6 +1705,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .placeholder\:text-sm::placeholder{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.hover\:mr-4:hover{
+  margin-right: 1rem;
 }
 
 .hover\:rounded-3xl:hover{
